fix: IPFS gateway

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=wss://molotov-api-zulvk.ondigitalocean.app
-VITE_IPFS_GATEWAY=snapshot.mypinata.cloud
+VITE_IPFS_GATEWAY=ipfs.snapshot.box
